PP-FEAT-myapp & preview app & dialog box changes

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
                     <h4>Attestation Application</h4>
                 </div>
                 <div class="card-body">
-                    <button (click)="dashboardRoutes('attestation_page')" mat-raised-button color="primary">GO</button>
+                    <button (click)="dashboardRoutes()" mat-raised-button color="primary">GO</button>
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
                     <h4>Attestation Application</h4>
                 </div>
                 <div class="card-body">
-                    <button (click)="dashboardRoutes('attestation_page')" mat-raised-button color="primary">Apply Again</button>
+                    <button (click)="dashboardRoutes()" mat-raised-button color="primary">Apply Again</button>
                 </div>
             </div>
         </div>
